--- a/tidyverse_packages/ggplot2.Rmd
+++ b/tidyverse_packages/ggplot2.Rmd
@@ -2,7 +2,7 @@
 title: "Unpacking the Tidyverse - ggplot2"
 author: "Fisher Ankney"
 date: "January 19, 2018"
-output: html_document
+output: md_document
 ---
 
 <br> 
@@ -13,7 +13,7 @@ output: html_document
 
 This is the first of eight installments of my *Unpacking the Tidyverse* series. Each installment focuses on one of the eight core packages in Hadley Wickham's tidyverse. Instructions given in each post are mainly derived from Hadley's textbook, [R for Data Science](http://r4ds.had.co.nz/), and CRAN package documentation. This installment of *Unpacking the Tidyverse* focuses on the graphing package, ggplot2. The next installment focuses on the readr package and can be found [here](link).
 
-The ggplot2 package is a powerful data visualization tool based on the grammer of graphics: an idea that any plot can be described using seven distinct parameters. In this blog post, I run through these parameters attempting summarize them in an easy-to-access resource for some of the most common tasks in data visualization. 
+The ggplot2 package is a powerful data visualization tool based on the grammar of graphics: an idea that any plot can be described using seven distinct parameters. In this blog post, I run through these parameters attempting summarize them in an easy-to-access resource for some of the most common tasks in data visualization. 
 
 <br> 
 
@@ -42,7 +42,7 @@ facet_***facet declaration***()
 
 <br> 
 
-Not all of these parameters must be defined for every ggplot call, but by defining the dataset, plot geometry, variables, statistical transformations, position adjustments, coordinate system and facets, you can create almost any plot with ggplot2. Of course, there are additional functions that affect the aesthetics of the plot, such as annotations, titles, axes, and legends. Let's briefly cover all seven of these parameters, discussing the commands that I most commonly find useful for each of them. 
+Not all parameters must be defined for every ggplot call, but by defining the dataset, plot geometry, variables, statistical transformations, position adjustments, coordinate system and facets, you can create almost any plot with ggplot2. Of course, there are additional functions that affect the aesthetics of the plot, such as annotations, titles, axes, and legends. Let's briefly cover all seven of these parameters, discussing the commands that I most commonly find useful for each of them. 
 
 <br  /> 
 
@@ -56,7 +56,7 @@ ggplot(mpg)
 
 <br> 
 
-Just calling `ggplot()` with an assoicated dataset will create a canvas for your graphic, not an actual plot. This is because R doesn't know what variables you want plotted from that dataset, or how you want them plotted. In order to create a basic plot, you'll have to provide information on the plot's geometry. 
+Just calling `ggplot()` with an associated dataset will create a canvas for your graphic, not an actual plot. This is because R doesn't know what variables you want plotted from that dataset, or how you want them plotted. To create a basic plot, you'll have to provide information on the plot's geometry. 
 
 <br  />
 
@@ -71,10 +71,10 @@ ggplot(mpg) +
      
 <br> 
 
-Plot geometries are the most important parameter, and the only parameter other than `ggplot()` that must be defined in every single visualization. There are hundreds of geometries avaliable for your use, courtisy of the R community; check out http://www.ggplot2-exts.org/ for more information. Here's a list of the handful of geometries, mappings, and aestetics that I use most often. 
+Plot geometries are the most important parameter, and the only parameter other than `ggplot()` that must be defined in every single visualization. There are hundreds of geometries available for your use, courtesy of the R community; check out http://www.ggplot2-exts.org/ for more information. Here's a list of the handful of geometries, mappings, and aesthetics that I use most often. 
 
 ##### Geometries    
-* **geom_density( )** - 1 variable gaussian distribution
+* **geom_density( )** - 1 variable Gaussian distribution
 * **geom_point( )** - 2, 3, or 4 variable scatterplot 
 * **geom_smooth( )** -  2 or 3 variable line plot
 * **geom_bar(stat="identity")** -  2 or 3 variable bar plot
@@ -86,7 +86,7 @@ Plot geometries are the most important parameter, and the only parameter other t
 * **aes( x = )** - x-axis location
 * **aes( y = )** - y-axis location
 * **aes( ..., color = )** - color dependent on variable's value
-* **aes( ..., linetype = )** - linetype dependent on variable's value
+* **aes( ..., linetype = )** - line type dependent on variable's value
 * **aes( ..., size = )** - size of object dependent on variable's value
 
 ##### Aestetics 
@@ -103,11 +103,11 @@ Plot geometries are the most important parameter, and the only parameter other t
 
 <br> 
 
-Statistical transformations are most useful with `geom_bar`. Each geometry has an associated transformation, and most of the time this transformation is useful and should not be changed. The default transformation associated with `geom_bar` is `"count"`, or the total number of occurances of each variable. Sometimes you want a bar chart to visualize something else, like the unique occurances of each variable, or a different variable all together. These three transformations allow you control over bar charts to visualize your data in entirely new ways.      
+Statistical transformations are most useful with `geom_bar`. Each geometry has an associated transformation, and most of the time this transformation is useful and should not be changed. The default transformation associated with `geom_bar` is `"count"`, or the total number of occurrences of each variable. Sometimes you want a bar chart to visualize something else, like the unique occurrences of each variable, or a different variable all together. These three transformations allow you control over bar charts to visualize your data in entirely new ways.      
     
-* **geom_bar(aes(...), stat = "count")** - visualise the number of entires in a variable, n()    
-* **geom_bar(aes(...), stat = "identity")** - visuaise the variable, not the count    
-* **geom_bar(aes(...), stat = "unique")** - visualise only unique components of the variable    
+* **geom_bar(aes(...), stat = "count")** - visualize the number of entries in a variable, n()    
+* **geom_bar(aes(...), stat = "identity")** - visualize the variable, not the count    
+* **geom_bar(aes(...), stat = "unique")** - visualize only unique components of the variable    
 
 <br  />
 
@@ -115,11 +115,11 @@ Statistical transformations are most useful with `geom_bar`. Each geometry has a
 
 <br> 
 
-When geometric data occupies the same space, it is useful to use a position adjustment to better understand the visualisation. I really only find adjusting the positioning of data useful when I'm working with bar charts and scatterplots.   
+When there are multiple data points occupying the same space or are stacked too closely together, position adjustments allow for a clearer visualization. Most often used with bar charts and scatter plots, these are the three position adjustments I find to be the most useful. 
     
 * **geom_point(aes(...), position = "jitter")** - adds a small amount of noise to better view overlapping points     
 * **geom_bar(aes(...), position = "dodge")** - arranges bar elements side-by-side    
-* **geom_bar(aes(...), position = "fill")** - arranges bar elements on top of each other, normalizing     height    
+* **geom_bar(aes(...), position = "fill")** - arranges bar elements on top of each other, normalizing height    
 
 <br> 
    
@@ -135,12 +135,12 @@ ggplot(mpg) +
 
 <br  />     
 
-Cartesian coordinates are the go-to for 95% of my visualisations, but the coord_ function does more than call different coordinate systems. Often it's useful to fix the x-y ratio, or flip the axis of bar charts. When your working with exponential data, you may want to transform an axis to a logarithmic system. These useful functions and many more can be done by the coord_ function.    
+Cartesian coordinates are the go-to most visualizations, but the coord_ function does more than call different coordinate systems. Often, it's useful to fix the x-y ratio, or flip the axis of bar charts. When you’re working with exponential data, you may want to transform an axis to a logarithmic system. These useful functions and many more can be done by the coord_ function.    
     
 * **coord_fixed(ratio, xlim, ylim)** - fixing the aspect ratio between x and y
 * **coord_flip(xlim, wlim)** - flipping the axes 
-* **coord_polar(theta, start, direction)** - coverting cartesian to polar coordinates
-* **coord_trans(xtrans, ytrans, limx, limy)** - transform cartesian coordiantes, use with log functions    
+* **coord_polar(theta, start, direction)** - converting Cartesian to polar coordinates
+* **coord_trans(xtrans, ytrans, limx, limy)** - transform Cartesian coordinates, use with log functions    
 * **coord_map(projection, orientation, xlim, ylim)** - mapproj package projections 
    
 <br>   
@@ -157,7 +157,7 @@ ggplot(data = mpg) +
   
 <br> 
 
-I don't use facets that much; to be honest I find them pretty distracting. If you're a fan of contrasting minerature plots, you might find these faceting options useful.    
+I don't use facets that often, but if you're a fan multiple miniature plots, you might find these faceting options useful.    
 
 * **facet_grid(x ~ y, labeller, scales)** - facets the display into rows and columns based on the two given variables ("."" placeholder)    
 * **facet_wrap(~ x, labeller, scales, nrow, ncol)** - wraps facets into a rectangular layout    
@@ -179,7 +179,7 @@ ggplot(mpg) +
   )
 ```
       
-Labels are helpful for properly communicating your visualisation. Including these five labels with your plots can help clarify your topic, variables, and sources.    
+Labels are helpful for properly communicating your visualization. Including these five labels with your plots can help clarify your topic, variables, and sources.    
 
 <br  />
 
@@ -187,11 +187,11 @@ Labels are helpful for properly communicating your visualisation. Including thes
 
 <br> 
 
-Annotations are another feature I don't use too often, but I'll include them anyways. I think annotating individual observations is a mistake, it clutters the graphic and takes away from the effectiveness of the visualisation. Packages like plotly and shiny do a better job of creating interactive graphics if you want individual labels. If you, however, insist on creating a ggplot with annotations, these might be useful.     
-      
+Annotations can be helpful to point out specific properties of a visualization. I think annotating multiple individual observations is a mistake, it clutters the graphic and takes away from the effectiveness of the visualization. Packages like plotly and shiny do a better job of creating interactive graphics if you want individual labels. With that in mind, here are some annotations that are easy to use in ggplot2. 
+
 * **geom_text(aes(label = "text here"), vjust = , hjust = )** - places a summary annotation within the graphic, according to vjust and hjust     
 * **geom_hline(yintercept = , size = , color = , linetype)** - creates a horizontal reference line through the plot according to yintercept     
-* **geom_vline(xintercept = , size =, color =, linetype =)** - creates a verticle reference line through the plot according to xintercept     
+* **geom_vline(xintercept = , size =, color =, linetype =)** - creates a vertical reference line through the plot according to xintercept     
 * **geom_rect(aes(xmin = , xmax = , ymin = , ymax = ))** - creates a rectangle to box in and highlight interesting data    
 * **geom_segment(aes(x = , y = , xend = , yend = ,) arrow = )** - creates a line segment within the plot, it can be an arrow     
      
@@ -201,7 +201,7 @@ Annotations are another feature I don't use too often, but I'll include them any
  
 <br> 
 
-Scales are automatically set when you create a ggplot, but sometimes it's useful to alter the color scheme, legend, or axes. The naming sceme for these functions is scale_ followed by the name of the aesthetic then another _, and then the name of the scale.
+Scales are automatically set when you create a ggplot, but sometimes it's useful to alter the color scheme, legend, or axes. The naming scheme for these functions is scale_ followed by the name of the aesthetic then another _, and then the name of the scale.
 
 ##### Aestetic Names
      
@@ -220,14 +220,16 @@ Scales are automatically set when you create a ggplot, but sometimes it's useful
   * **\_continous** - maps continuous variables to visual values
   * **\_identity** - uses data values as visual values 
   * **\_manual** - values = c( ), maps discrete values to manually chose visual values 
-  * **\_gradient** - creates a two color gradient, low - high
-  * **\_gradient2** - creates a diverging two color gradient, positive - negative
+  * **\_gradient** - creates a two-color gradient, low - high
+  * **\_gradient2** - creates a diverging two color gradients, positive - negative
   * **\_gray** -creates a gradient in gray
   * **\_brewer** - brewer( palette = " "), calls RColorBrewer palettes    
      
 <br  />
 
 ### Axes  
+
+Scales can also be used to alter axes in ggplot2, these are some commented examples for fixing common behavioral issues you may have with your axes. 
 
 <br> 
 
@@ -238,7 +240,7 @@ scale_x_continuous(breaks = seq(0, 10, by = 1), labels = c(1:9, "ten"))
 scale_x_discrete(breaks=c("ctrl", "trt1", "trt2"),            # defined tick marks
                  labels=c("Control", "Treat 1", "Treat 2"))   # new names
                  
-expand_limits(x = c(0,8), y = c(0,8))                         # expand the limits of the graph to visualise specific values
+expand_limits(x = c(0,8), y = c(0,8))                         # expand the limits of the graph to visualize specific values
 
 scale_y_reverse()     # Reverse y-axis direction (zero on top)
 
@@ -255,15 +257,14 @@ scale_y_log10(breaks = trans_breaks("log10", function(x) 10^x),
               labels = trans_format("log10", math_format(10^.x)))
 ```
 
-<br> 
-
-Scales can be used to alter axes in ggplot2, it's a fairly straight forward process. These are some commented examples for fixing common behavioral issues you may have with your axes.   
-
 <br  />     
 
 ### Legends     
 
 <br> 
+
+Legends can be a bit harder to wrangle than axes. Here are examples to several common problems I have with legends.
+
 
 ```{r eval=FALSE}
 
@@ -280,7 +281,7 @@ theme(legend.title = element_blank()) # hides the legends title
 # changing the order of items in your legend, scale_ function is dependent upon the type of plot
 scale_fill_discrete(breaks=(c("item1", "item2", "item3")))
 
-# simply reverse the current item display in thelegend
+# simply reverse the current item display in the legend
 scale_fill_discrete(guide = guide_legend(reverse=TRUE))
 
 # manually alter color, break, label, and name of legend items.
@@ -291,10 +292,6 @@ scale_fill_manual(values=c("#999999", "#E69F00", "#56B4E9"),
 ```
     
 <br> 
-
-Legends can be a bit harder to wrangle than axes. Heere are examples to several common problems I have with legends.
-
-<br  />
 
 ### Colors 
 
@@ -317,7 +314,11 @@ RColorBrewer::display.brewer.all()
 
 <br> 
 
-INSERT VIRIDISLITE EXAMPLES TOO
+The viridisLite Package has contains 5 color scales that are color-blind and gray-scale friendly. 
+
+INSERT IMAGE HERE 
+
+<br> 
 
 ### Themes      
 
@@ -332,20 +333,20 @@ Sometimes you don't want to go through the effort of creating your own theme, so
 
 <br  />    
 
-### Conclusions  
+### Final Thoughts
 
 <br> 
 
-This is just a fraction of what ggplot2 can do, but with this infromation I think you should be able to solve 80% of your graphing needs. Again, the references listed at the beginning of this write up are excellent and worth checking out. If you want to learn more about R for Data Science written by Hadley Wickham, it's free to read at <http://r4ds.had.co.nz/>. If you're too lazy to read the entire book, check out the other posts in my R for Data Science Summary Series.    
+This is just a small taste of what ggplot2 can do, but with this information you should be able to solve 80% of your graphing needs. Again, the references listed at the beginning of this write up are excellent and worth checking out. If you want to learn more about R for Data Science written by Hadley Wickham, it's free to read at <http://r4ds.had.co.nz/>. If you don't want to read through the entire book, check out the other posts in my R for Data Science Summary Series.    
 
 For more useful resources, including advanced ggplot2 techniques, check out these links:       
 
-R Graphics ggplot2 Cookbook - <http://www.cookbook-r.com/Graphs/>     
-Top 50 Visualizations - <http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html>    
-R Studio's ggplot2 Cheat Sheet - <https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf>    
-Hadley's ggplot2 book (amazon) - <https://www.amazon.com/dp/331924275X/ref=cm_sw_su_dp>    
+- [R Graphics ggplot2 Cookbook](http://www.cookbook-r.com/Graphs/)  
+- [Top 50 Visualizations](http://r-statistics.co/Top50-Ggplot2-Visualizations-MasterList-R-Code.html)
+- [R Studio's ggplot2 Cheat Sheet](https://www.rstudio.com/wp-content/uploads/2015/03/ggplot2-cheatsheet.pdf) 
+- [Hadley's ggplot2 Book for sale](https://www.amazon.com/dp/331924275X/ref=cm_sw_su_dp) 
 
 <br  />
 
 Thanks for reading,     
-- Fisher 
+- Fisher
